fixed horizontal scrolling issue

--- a/css/home-page.css
+++ b/css/home-page.css
@@ -37,7 +37,7 @@ a:hover {
 	background: transparent;
 	border: transparent;
 	width: 100%;
-	height: 184px;
+	height: 120px;
 }
 .nav-link {
 	color: #fafafa;
@@ -96,6 +96,7 @@ a:hover {
 }
 
 .container-main{
+    background:rgba(0,0,0,0.7);
     color: white;
     box-shadow: 0 8px 25px black;
     border: 20px #e1e1e8;
@@ -139,7 +140,7 @@ i:hover{
 	from {
 		opacity: 0;
 		position: absolute;
-		top: 100px;
+		top: 35px;
 
 	}
 	to {
@@ -187,10 +188,10 @@ i:hover{
 
 .parallax {
 	/* The image used */
-	background-image: url("../img/parallax/bs-youtube-function.jpg");
+	background: url("../img/parallax/bs-youtube-function.jpg");
 
 	/* Set a specific height */
-	min-height: 500px;
+	min-height: 100%;
 
 	/* Create the parallax scrolling effect */
 	background-attachment: fixed;
